# prac-gstreamer

./: .gitignore  CMakeLists.txt  camrec.sh  simple-mp4-video-recording.sh
cmake/: compileOptions.cmake
include/: defs_common.h  logging.h
src/: CMakeLists.txt
src/liblogging/: CMakeLists.txt  logging.c
src/myapp-00/: CMakeLists.txt  myapp.c
src/myapp-01/: CMakeLists.txt  myapp-01.c
src/prac-01-init/: CMakeLists.txt  prac-init.c
src/prac-02-element/: CMakeLists.txt  prac-element.c
src/prac-03-bin/: CMakeLists.txt  prac-bin.c
src/prac-04-bus/: CMakeLists.txt  prac-bus.c
src/prac-05-pad/: CMakeLists.txt  prac-pad.c
src/prac-06-first-app/: CMakeLists.txt  prac-first-app.c
src/prac-07-meta/: CMakeLists.txt  prac-meta.c
src/prac-08-buffering/: CMakeLists.txt  prac-buffering.c
src/prac-09-thread1/: CMakeLists.txt  prac-09-thread1.c
src/prac-10-thread2/: CMakeLists.txt  prac-10-thread2.c
src/prac-11-autoplugging/: CMakeLists.txt  prac-11-autoplugging.c
src/prac-12-manipulation/: CMakeLists.txt  prac-12-manipulation.c
src/prac-13-manipulation2/: CMakeLists.txt  prac-13-manipulation2.c
src/prac-14-manipulation3/: CMakeLists.txt  prac-14-manipulation3.c
src/prac-15-manipulation4/: CMakeLists.txt  prac-15-manipulation4.c
src/prac-16-manipulation5/: CMakeLists.txt  prac-16-manipulation5.c
src/prac-17-manipulation6/: CMakeLists.txt  prac-17-manipulation6.c
src/prac-webcam1/: CMakeLists.txt  prac-webcam1.c
src/tutorial1/: CMakeLists.txt  basic-tutorial-1.c
src/tutorial12/: CMakeLists.txt  basic-tutorial-12.c
src/tutorial13/: CMakeLists.txt  basic-tutorial-13.c
src/tutorial2/: CMakeLists.txt  basic-tutorial-2.c
src/tutorial3/: CMakeLists.txt  basic-tutorial-3.c
src/tutorial4/: CMakeLists.txt  basic-tutorial-4.c
src/tutorial5/: CMakeLists.txt  basic-tutorial-5.c
src/tutorial6/: CMakeLists.txt  basic-tutorial-6.c
src/tutorial7/: CMakeLists.txt  basic-tutorial-7.c
src/tutorial8/: CMakeLists.txt  basic-tutorial-8.c
src/tutorial9/: CMakeLists.txt  basic-tutorial-9.c
tests/: CMakeLists.txt
tests/aiddca/: CMakeLists.txt  main.cpp
tests/foo/: CMakeLists.txt  main.c
